    * 3845 FIX: Added missing validation of host attribute values to WATO Web API calls

    Notifications:
    * 3263 Notifications: allow users to restrict by their contact groups...
    * 3532 Rule base notifications: Three new conditions for service groups matching...
    * 3140 mail notification script can now optionally connect directly to a smtp server instead of using sendmail...
    * 3253 FIX: sms: notification script sms now handles single quotes in the message in the right way
    * 3346 FIX: Re-added envelope sender to asciimail/mail notification plugins
    * 3380 FIX: Fixed graphs in service notifications having spaces in service descriptions
    * 3418 FIX: Do not send host notifications if a service group is required...
            NOTE: Please refer to the migration notes!
    * 3426 FIX: sms: fixed wrong message handling after message was quoted and therefore too long
    * 3139 FIX: fixed a couple of minor issues in call to notification scripts...
    * 3146 FIX: notification scripts will now also timeout when sending a bulk notification...
    * 3860 FIX: EC condition: Fixed default value of rule id selection

    BI:
    * 3271 New option in aggregation for tuning aggregation of downtimes...
    * 3396 Change default setting of Precompile aggregations on demand to ON now...
    * 3449 The host alias can now be used in BI aggregates...
    * 3546 Drastically sped up response time on querying single aggregations...
    * 3873 BI: now rules can easily be copied and deactivate temporarily
    * 3247 FIX: Do not allow multiple BI aggregates with the same title...
    * 3232 FIX: BI: Only querying site of host for specific host status info...
    * 3291 FIX: Improved error handling when searching for BI aggregations with invalid regex
    * 3358 FIX: Fixed BI Boxes views when "Enable BI compilation diagnostics" enabled
    * 3439 FIX: Fixed processing of BI aggregations containing umlauts