@@ -633,6 +633,7 @@
     * 3263 Notifications: allow users to restrict by their contact groups...
     * 3532 Rule base notifications: Three new conditions for service groups matching...
     * 3140 mail notification script can now optionally connect directly to a smtp server instead of using sendmail...
+    * 3886 Notifications that do not match any rule are sent to fallback mail / contacts...
     * 3253 FIX: sms: notification script sms now handles single quotes in the message in the right way
     * 3346 FIX: Re-added envelope sender to asciimail/mail notification plugins
     * 3380 FIX: Fixed graphs in service notifications having spaces in service descriptions
